# mesagisto-client-rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs
locales/: en-US.yml  zh-CN.yml
src/: cache.rs  cipher.rs  db.rs  lib.rs  net.rs  pool.rs  quic.rs  res.rs  server.rs  tls.rs  ws.rs
src/data/: events.rs  message.rs  mod.rs
