[package]
name = "mesagisto-client"
authors = ["Itsusinn奕䜣 <itsusinn@foxmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]

once_cell = "1.12.0"
smol = "1.2.5"
tracing = "0.1.34"
aes-gcm = { version = "0.9.4", features = ["std"] }

dashmap = { version = "5.3.4", features = ["serde"] }
rand = "0.8.5"

futures = "0.3.21"
base64-url = "1.4.13"
serde = "1.0.137"
serde_cbor = "0.11.2"
serde_bytes = "0.11.6"

arcstr = { version = "1.1.3", features = ["serde"] }
bytes = { version = "1.1.0", features = ["serde"] }

sha2 = "0.10.2"
either = "1.6.1"
generic-array = "0.14.5"
typenum = "1.15.0"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros","signal","sync","fs"] }
anyhow = { version = "1.0.57", features = ["backtrace"] }

# file system
notify = "5.0.0-pre.15"
# async
hex = "0.4.3"
nats = "0.20.1"
singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", rev = "bee321c" }
reqwest = { version = "0.11.10", default-features = false, features = ["rustls","socks","rustls-tls-webpki-roots","gzip"] }
educe = { version = "0.4.19", default-features = false, features = ["Default"] }

bindgen = { version = "0.59.2", default-features = false, features = ["runtime"] }
sled = "0.34.7"
