[package]
name = "mesagisto-client"
authors = ["Itsusinn奕䜣 <itsusinn@foxmail.com>"]
version = "0.1.0"
edition = "2021"

[package.metadata.i18n]
available-locales = ["en-US", "zh-CN"]
default-locale = "en-US"
load-path = "locales"

[dependencies]

# i18n
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.6.4"
rust-embed = "6"

once_cell = "1.15.0"
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
smol = "1.2.5"
tracing = "0.1.36"
aes-gcm = { version = "0.10.1", features = ["std"] }

rust-i18n = { branch = "main", git = "https://github.com/Itsusinn/rust-i18n.git"}

dashmap = { version = "5.3.4", features = ["serde"] }
rand = "0.8.5"
uuid = { version = "1.1.2", features = ["v4", "v5","serde"] }
async-recursion = "1.0.0"

futures = "0.3.23"
base64-url = "1.4.13"
url = "2.2.2"
trust-dns-resolver = "0.21.2"

derive_builder = "0.11.2"

# serde
serde = { version = "1.0.143", features = ["rc"] }
ciborium = "0.2.0"
serde_bytes = "0.11.7"

arcstr = { version = "1.1.4", features = ["serde"] }
bytes = { version = "1.2.1", features = ["serde"] }

sha2 = "0.10.2"
either = "1.8.0"
generic-array = "0.14.6"
typenum = "1.15.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros","signal","sync","fs"] }
color-eyre = "0.6.2"

# async
hex = "0.4.3"
singleton = { branch = "master", git = "https://github.com/Itsusinn/singleton-rs.git" }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls","rustls-tls","socks","gzip"] }
educe = { version = "0.4.19", default-features = false, features = ["Default","Debug"] }
sled = "0.34.7"
tokio-tungstenite = { version = "0.17.2",features = ["rustls-tls-native-roots"] }

# tls
rustls = { version = "0.20.7", features = ["dangerous_configuration"]}
rustls-pemfile = "1.0.1"
rustls-native-certs = "0.6.2"

[build-dependencies]
anyhow = "1.0.62"
fs_extra = "1.2.0"
glob = "0.3.0"
